<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


    <TextView
            android:text="@string/p1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="0dp"
            android:id="@+id/p1"
            android:textSize="24sp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"/>
    <TextView
            android:text="@string/p2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="0dp"
            android:id="@+id/p2"
            android:textSize="24sp"
            android:layout_marginTop="144dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"/>
    <TextView
            android:text="@string/p3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="0dp"
            android:id="@+id/p3"
            android:textSize="24sp"
            android:layout_marginTop="260dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"/>
    <TextView
            android:text="@string/p4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="0dp"
            android:id="@+id/p4"
            android:textSize="24sp"
            android:layout_marginTop="372dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"/>
    <TextView
            android:text="@string/scr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/p1"
            app:layout_constraintEnd_toEndOf="@+id/p1"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.634"
            app:layout_constraintTop_toTopOf="@+id/p1"
            app:layout_constraintBottom_toBottomOf="@+id/p1"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/scr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/p2"
            app:layout_constraintBottom_toBottomOf="@+id/p2"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/scr"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/textView5"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/p3"
            app:layout_constraintTop_toTopOf="@+id/p3"
            app:layout_constraintHorizontal_bias="0.625"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/scr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/p4"
            app:layout_constraintBottom_toBottomOf="@+id/p4"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintHorizontal_bias="0.625"/>
    <TextView
            android:text="@string/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="0dp"
            android:id="@+id/status"
            android:layout_marginTop="500dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="24sp"/>
    <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="206dp"/>
    <TextView
            android:text="@string/count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/p1Count"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/p1"
            android:layout_marginEnd="48dp"
            app:layout_constraintTop_toTopOf="@+id/textView3"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.0"
            android:textStyle="italic"/>
    <TextView
            android:text="@string/count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/p2Count"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/p2"
            android:layout_marginEnd="64dp"
            app:layout_constraintTop_toTopOf="@+id/textView4"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.0"
            android:textStyle="italic"/>
    <TextView
            android:text="@string/count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/p3Count"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/p3"
            android:layout_marginEnd="64dp"
            app:layout_constraintTop_toTopOf="@+id/textView5"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintVertical_bias="0.0"
            android:textStyle="italic"/>
    <TextView
            android:text="@string/count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/p4Count"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/textView6"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintEnd_toEndOf="@+id/p4"
            android:layout_marginEnd="64dp"
            android:textStyle="italic"/>
    <Button
            android:text="@string/btnAddOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/p1AddOneBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginStart="16dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@android:color/holo_green_dark"/>
    <Button
            android:text="@string/btnMinusOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/p1MinusOneBtn"
            app:layout_constraintStart_toEndOf="@+id/p1AddOneBtn"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/holo_red_dark"
            style="@style/Widget.AppCompat.Button.Borderless"/>
    <Button
            android:text="@string/btnAddFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/p1AddFiveBtn"
            app:layout_constraintStart_toEndOf="@+id/p1MinusOneBtn"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/holo_green_dark"
            style="@style/Widget.AppCompat.Button.Borderless"/>
    <Button
            android:text="@string/btnMinusFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/p1MinusFiveBtn"
            app:layout_constraintStart_toEndOf="@+id/p1AddFiveBtn"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/holo_red_dark"
            style="@style/Widget.AppCompat.Button.Borderless"/>
    <Button
            android:text="@string/btnAddOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/p2AddOneBtn"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:textColor="@android:color/holo_green_dark"
            style="@style/Widget.AppCompat.Button.Borderless"/>
    <Button
            android:text="@string/btnMinusOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/p2MinusOneBtn"
            app:layout_constraintStart_toEndOf="@+id/p2AddOneBtn"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:textColor="@android:color/holo_red_dark"
            style="@style/Widget.AppCompat.Button.Borderless"/>
    <Button
            android:text="@string/btnAddFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/p2AddFiveBtn"
            app:layout_constraintStart_toEndOf="@+id/p2MinusOneBtn"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:textColor="@android:color/holo_green_dark"
            style="@style/Widget.AppCompat.Button.Borderless"/>
    <Button
            android:text="@string/btnMinusFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/p2MinusFiveBtn"
            app:layout_constraintStart_toEndOf="@+id/p2AddFiveBtn"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:textColor="@android:color/holo_red_dark"
            style="@style/Widget.AppCompat.Button.Borderless"/>
    <Button
            android:text="@string/btnAddOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/p3AddOneBtn"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:textColor="@android:color/holo_green_dark"
            style="@style/Widget.AppCompat.Button.Borderless"/>
    <Button
            android:text="@string/btnMinusOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/p3MinusOneBtn"
            app:layout_constraintStart_toEndOf="@+id/p3AddOneBtn"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:textColor="@android:color/holo_red_dark"
            style="@style/Widget.AppCompat.Button.Borderless"/>
    <Button
            android:text="@string/btnAddFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/p3AddFiveBtn"
            app:layout_constraintStart_toEndOf="@+id/p3MinusOneBtn"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:textColor="@android:color/holo_green_dark"
            style="@style/Widget.AppCompat.Button.Borderless"/>
    <Button
            android:text="@string/btnMinusFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/p3MinusFiveBtn"
            app:layout_constraintStart_toEndOf="@+id/p3AddFiveBtn"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:textColor="@android:color/holo_red_dark"
            style="@style/Widget.AppCompat.Button.Borderless"/>
    <Button
            android:text="@string/btnAddOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/p4AddOneBtn"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            android:textColor="@android:color/holo_green_dark"
            style="@style/Widget.AppCompat.Button.Borderless"/>
    <Button
            android:text="@string/btnMinusOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/p4MinusOneBtn"
            app:layout_constraintStart_toEndOf="@+id/p4AddOneBtn"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            android:textColor="@android:color/holo_red_dark"
            style="@style/Widget.AppCompat.Button.Borderless"/>
    <Button
            android:text="@string/btnAddFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/p4AddFiveBtn"
            app:layout_constraintStart_toEndOf="@+id/p4MinusOneBtn"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            android:textColor="@android:color/holo_green_dark"
            style="@style/Widget.AppCompat.Button.Borderless"/>
    <Button
            android:text="@string/btnMinusFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/p4MinusFiveBtn"
            app:layout_constraintStart_toEndOf="@+id/p4AddFiveBtn"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            android:textColor="@android:color/holo_red_dark"
            style="@style/Widget.AppCompat.Button.Borderless"/>
</android.support.constraint.ConstraintLayout>